{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 92,
  "lineage": "1dfb26eb-a46d-04ad-c91e-a6c92f02a182",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0124f7bddd0adbf1e",
            "arn": "arn:aws:ec2:ap-south-1:305042756398:elastic-ip/eipalloc-0124f7bddd0adbf1e",
            "domain": "vpc",
            "id": "eipalloc-0124f7bddd0adbf1e",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-207-25-244.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.25.244",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "travelmemory-nat-eip"
            },
            "tags_all": {
              "Name": "travelmemory-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305042756398",
            "id": "eipalloc-0124f7bddd0adbf1e",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07913afb733d57f36",
            "arn": "arn:aws:ec2:ap-south-1:305042756398:instance/i-0c77382ef77e94f65",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "travelmemory-ec2-profile",
            "id": "i-0c77382ef77e94f65",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mern-assignment-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-099955fea6b9bf7dc"
              }
            ],
            "primary_network_interface_id": "eni-099955fea6b9bf7dc",
            "private_dns": "ip-10-0-2-199.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.199",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cef40f054c47fb37",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa7395ef41518e40",
            "tags": {
              "Name": "travelmemory-database",
              "Role": "database"
            },
            "tags_all": {
              "Name": "travelmemory-database",
              "Role": "database"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c9f3995056d91a00"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305042756398",
            "id": "i-0c77382ef77e94f65",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.database",
            "aws_security_group.web",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07913afb733d57f36",
            "arn": "arn:aws:ec2:ap-south-1:305042756398:instance/i-0de6a95b39c3710f6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "travelmemory-ec2-profile",
            "id": "i-0de6a95b39c3710f6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mern-assignment-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c66d59fd11b95ddb"
              }
            ],
            "primary_network_interface_id": "eni-0c66d59fd11b95ddb",
            "private_dns": "ip-10-0-1-211.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.211",
            "public_dns": "ec2-35-154-71-171.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.71.171",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05f83a8c5473356ab",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f20b01b3b19b50b6",
            "tags": {
              "Name": "travelmemory-web",
              "Role": "web"
            },
            "tags_all": {
              "Name": "travelmemory-web",
              "Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e1efb0291a0be459"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305042756398",
            "id": "i-0de6a95b39c3710f6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:305042756398:internet-gateway/igw-0295ef1f22557bf69",
            "id": "igw-0295ef1f22557bf69",
            "owner_id": "305042756398",
            "region": "ap-south-1",
            "tags": {
              "Name": "travelmemory-igw"
            },
            "tags_all": {
              "Name": "travelmemory-igw"
            },
            "vpc_id": "vpc-0a8e578f5b0f03cc7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305042756398",
            "id": "igw-0295ef1f22557bf69",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0124f7bddd0adbf1e",
            "association_id": "eipassoc-0adcea6a728d74329",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0a93ee59e5c3a2a15",
            "network_interface_id": "eni-0267fc3e53b326670",
            "private_ip": "10.0.1.31",
            "public_ip": "15.207.25.244",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f20b01b3b19b50b6",
            "tags": {
              "Name": "travelmemory-nat"
            },
            "tags_all": {
              "Name": "travelmemory-nat"
            },
            "vpc_id": "vpc-0a8e578f5b0f03cc7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305042756398",
            "id": "nat-0a93ee59e5c3a2a15",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:305042756398:route-table/rtb-0848842586ffba60b",
            "id": "rtb-0848842586ffba60b",
            "owner_id": "305042756398",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a93ee59e5c3a2a15",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "travelmemory-private-rt"
            },
            "tags_all": {
              "Name": "travelmemory-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8e578f5b0f03cc7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305042756398",
            "id": "rtb-0848842586ffba60b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:305042756398:route-table/rtb-05ed555cdd1b6d453",
            "id": "rtb-05ed555cdd1b6d453",
            "owner_id": "305042756398",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0295ef1f22557bf69",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "travelmemory-public-rt"
            },
            "tags_all": {
              "Name": "travelmemory-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8e578f5b0f03cc7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305042756398",
            "id": "rtb-05ed555cdd1b6d453",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0689820c36ba43817",
            "region": "ap-south-1",
            "route_table_id": "rtb-0848842586ffba60b",
            "subnet_id": "subnet-0fa7395ef41518e40"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305042756398",
            "id": "rtbassoc-0689820c36ba43817",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02be12b1a878b41ee",
            "region": "ap-south-1",
            "route_table_id": "rtb-05ed555cdd1b6d453",
            "subnet_id": "subnet-0f20b01b3b19b50b6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305042756398",
            "id": "rtbassoc-02be12b1a878b41ee",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:305042756398:security-group/sg-0c9f3995056d91a00",
            "description": "Security group for MongoDB server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9f3995056d91a00",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MongoDB from web server",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e1efb0291a0be459"
                ],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [],
                "description": "SSH from web server",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e1efb0291a0be459"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "travelmemory-database-sg",
            "name_prefix": "",
            "owner_id": "305042756398",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "travelmemory-database-sg"
            },
            "tags_all": {
              "Name": "travelmemory-database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8e578f5b0f03cc7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305042756398",
            "id": "sg-0c9f3995056d91a00",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:305042756398:security-group/sg-0e1efb0291a0be459",
            "description": "Security group for TravelMemory web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1efb0291a0be459",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "49.43.24.250/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "travelmemory-web-sg",
            "name_prefix": "",
            "owner_id": "305042756398",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "travelmemory-web-sg"
            },
            "tags_all": {
              "Name": "travelmemory-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8e578f5b0f03cc7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305042756398",
            "id": "sg-0e1efb0291a0be459",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:305042756398:subnet/subnet-0fa7395ef41518e40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa7395ef41518e40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "305042756398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "travelmemory-private-subnet"
            },
            "tags_all": {
              "Name": "travelmemory-private-subnet"
            },
            "vpc_id": "vpc-0a8e578f5b0f03cc7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305042756398",
            "id": "subnet-0fa7395ef41518e40",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:305042756398:subnet/subnet-0f20b01b3b19b50b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f20b01b3b19b50b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "305042756398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "travelmemory-public-subnet"
            },
            "tags_all": {
              "Name": "travelmemory-public-subnet"
            },
            "vpc_id": "vpc-0a8e578f5b0f03cc7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305042756398",
            "id": "subnet-0f20b01b3b19b50b6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:305042756398:vpc/vpc-0a8e578f5b0f03cc7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05b8f793fed6040b9",
            "default_route_table_id": "rtb-0e8b8eb3ce3473f12",
            "default_security_group_id": "sg-0dfa6c0f18542c5ed",
            "dhcp_options_id": "dopt-095052419975225ee",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a8e578f5b0f03cc7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e8b8eb3ce3473f12",
            "owner_id": "305042756398",
            "region": "ap-south-1",
            "tags": {
              "Name": "travelmemory_vpc"
            },
            "tags_all": {
              "Name": "travelmemory_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305042756398",
            "id": "vpc-0a8e578f5b0f03cc7",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}